# GPN-Chat

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  chatui.py  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
source/: TranscriptionAndMetadataToDocument.py  chatbot.py  chatui.py  crawler.py  git_root_finder.py  gpn_chat_pipeline.py  indexing_pipeline.py  logger.py  model_trainer.py  segment.py  transciber.py  transcriber.py  transcriber2.py  transcription_and_metadata_to_document.py  translator.py
source/component/: TranscriptionAndMetadataToDocument.py
