[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "GPN-GPT"
version = "0.1.0"
description = "Ein GPT, welches auf den Gulaschprogrammiernacht Talks trainiert ist"
authors = ["Felix Schneider <mail@fschneider.me>", "Vincent Mielke"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.38.0"
haystack-ai = "^2.5.1"
openai = "^1.44.1"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
openai-whisper = "^20231117"
black = "^24.8.0"
isort = "^5.13.2"
